Modified Bubbles background image

--- a/Bubble Ads/Bubble Ads/Base.lproj/Main.storyboard
+++ b/Bubble Ads/Bubble Ads/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bubbles_background.png" id="Avt-TH-AQV">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bubbles_background.jpg" id="Avt-TH-AQV">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         </imageView>
@@ -36,7 +36,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bubbles_background.png" width="2048" height="1536"/>
+        <image name="bubbles_background.jpg" width="3458" height="2596"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
